# desbench

./: .gitignore  BUILD  CMakeLists.txt  CONTRIBUTING.md  Makefile  NOTICE  README.md  WORKSPACE  barriers.py  build_with_spack_cmake.sh  throughput.py
cfg/: benchmark.json
config/: benchmark.json
scripts/: sweep.py  sweep2.py
src/: main.cc
src/bench/: BenchComponent.cc  BenchComponent.h  EmptyComponent.cc  EmptyComponent.h  MemoryComponent.cc  MemoryComponent.h  SimpleComponent.cc  SimpleComponent.h
src/example/: BenchComponent.cc  BenchComponent.h  BenchModel.cc  BenchModel.h  BounceComponent.cc  BounceComponent.h  EmptyComponent.cc  EmptyComponent.h  EmptyModel.cc  EmptyModel.h  MemoryComponent.cc  MemoryComponent.h  MemoryModel.cc  MemoryModel.h  MixComponent.cc  MixComponent.h  MixModel.cc  MixModel.h  Model.cc  Model.h  NewDeleteComponent.cc  NewDeleteComponent.h  PHoldComponent.cc  PHoldComponent.h  Sha1Model.cc  Sha1Model.h  Sha512Model.cc  Sha512Model.h  ShaComponent.cc  ShaComponent.h  ShaModel.cc  ShaModel.h  SimpleComponent.cc  SimpleComponent.h  SimpleModel.cc  SimpleModel.h
